# DeepPilot

./: README.md  requirements.txt  setup.sh
DeepPilot_network/: evaluation_mosaic-2img.py  evaluation_mosaic-4img.py  evaluation_mosaic-6img.py  evaluation_mosaic-8img.py  train_deeppilot.py
DeepPilot_network/network_libs/: helper_net.py  net.py
adr_worlds/: race-track1.world  race-track2.world  race-track3.world
gazebo_models/adr2017_Dynamic_Gate/: model.config  model.sdf
gazebo_models/adr2017_Large_Gate/: model.config  model.sdf
gazebo_models/adr2017_Medium_Gate/: model.config  model.sdf
gazebo_models/adr2017_Open_Gate/: model.config  model.sdf
gazebo_models/adr2017_Small_Gate/: model.config  model.sdf
gazebo_models/grass_plane/: model.sdf
keyboard/: CMakeLists.txt  package.xml
keyboard/include/keyboard/: keyboard.h
keyboard/src/: keyboard.cpp  main.cpp
launch/: bebop_racetrack1.launch  bebop_racetrack2.launch  bebop_racetrack3.launch  spawn_mav.launch  track1.launch  track_2.launch  track_3.launch  zig-zag_track.launch  zig-zag_track_with_opponent.launch
race_tracks/: race-track1.world  race-track2.world  race-track3.world  zig-zag-race_track.sdf  zig-zag-with_opponent-race_track.world
